--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "YOUR TOKEN",
+    "token": "TOKEN GOES HERE, MATE!",
     "prefix": "m.",
-    "ServerID": "Your server ID"
+    "ServerID": "Insert server ID, pls."
 }
